remove webdav references

--- a/data/assets/langs/Arabic.ini
+++ b/data/assets/langs/Arabic.ini
@@ -4,8 +4,8 @@ STR_LOCAL=محلي
 STR_REMOTE=بعيد
 STR_MESSAGES=الرسائل
 STR_UPDATE_SOFTWARE=تحديث التطبيق
-STR_CONNECT_WEBDAV=توصيل
-STR_DISCONNECT_WEBDAV=قطع الاتصال
+STR_CONNECT=توصيل
+STR_DISCONNECT=قطع الاتصال
 STR_SEARCH=بحث
 STR_REFRESH=تحديث
 STR_SERVER=الخادم
