--- a/data/assets/langs/Catalan.ini
+++ b/data/assets/langs/Catalan.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Local
 STR_REMOTE=Remot
 STR_MESSAGES=Missatges
 STR_UPDATE_SOFTWARE=Actualització de programari
-STR_CONNECT_WEBDAV=Connectar
-STR_DISCONNECT_WEBDAV=Desconnectar
+STR_CONNECT=Connectar
+STR_DISCONNECT=Desconnectar
 STR_SEARCH=Cercar
 STR_REFRESH=Refrescar
 STR_SERVER=Servidor
