--- a/data/assets/langs/Croatian.ini
+++ b/data/assets/langs/Croatian.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Lokalno
 STR_REMOTE=Daljinsko
 STR_MESSAGES=Poruke
 STR_UPDATE_SOFTWARE=Ažuriranje softvera
-STR_CONNECT_WEBDAV=Spajanje
-STR_DISCONNECT_WEBDAV=Odspajanje
+STR_CONNECT=Spajanje
+STR_DISCONNECT=Odspajanje
 STR_SEARCH=Pretražiti
 STR_REFRESH=Osvježiti
 STR_SERVER=Server
