--- a/data/assets/langs/Dutch.ini
+++ b/data/assets/langs/Dutch.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Lokaal
 STR_REMOTE=Extern
 STR_MESSAGES=Berichten
 STR_UPDATE_SOFTWARE=Update Software
-STR_CONNECT_WEBDAV=Verbind met
-STR_DISCONNECT_WEBDAV=Verbreek verbinding met
+STR_CONNECT=Verbind met
+STR_DISCONNECT=Verbreek verbinding met
 STR_SEARCH=Zoek
 STR_REFRESH=Vernieuw
 STR_SERVER=Server
