--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Local
 STR_REMOTE=Remote
 STR_MESSAGES=Messages
 STR_UPDATE_SOFTWARE=Update Software
-STR_CONNECT_WEBDAV=Connect
-STR_DISCONNECT_WEBDAV=Disconnect
+STR_CONNECT=Connect
+STR_DISCONNECT=Disconnect
 STR_SEARCH=Search
 STR_REFRESH=Refresh
 STR_SERVER=Server
