--- a/data/assets/langs/Euskera.ini
+++ b/data/assets/langs/Euskera.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Lekuko
 STR_REMOTE=Urrunekoa
 STR_MESSAGES=Mezuak
 STR_UPDATE_SOFTWARE=Eguneratu Softwarea
-STR_CONNECT_WEBDAV=Konektatu
-STR_DISCONNECT_WEBDAV=Deskonektatu
+STR_CONNECT=Konektatu
+STR_DISCONNECT=Deskonektatu
 STR_SEARCH=Bilatu
 STR_REFRESH=Freskatu
 STR_SERVER=Zerbitzaria
