--- a/data/assets/langs/French.ini
+++ b/data/assets/langs/French.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Local
 STR_REMOTE=A distance
 STR_MESSAGES=Messages
 STR_UPDATE_SOFTWARE=Mise à jour logicielle
-STR_CONNECT_WEBDAV=Connexion
-STR_DISCONNECT_WEBDAV=Déconnexion
+STR_CONNECT=Connexion
+STR_DISCONNECT=Déconnexion
 STR_SEARCH=Rechercher
 STR_REFRESH=Rafraîchir
 STR_SERVER=Serveur
