--- a/data/assets/langs/German.ini
+++ b/data/assets/langs/German.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Lokal
 STR_REMOTE=Remote
 STR_MESSAGES=Nachrichten
 STR_UPDATE_SOFTWARE=Software aktualisieren
-STR_CONNECT_WEBDAV=Verbinde
-STR_DISCONNECT_WEBDAV=Trenne
+STR_CONNECT=Verbinde
+STR_DISCONNECT=Trenne
 STR_SEARCH=Suchen
 STR_REFRESH=Aktualisieren
 STR_SERVER=Server
