--- a/data/assets/langs/Greek.ini
+++ b/data/assets/langs/Greek.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Τοπικό
 STR_REMOTE=Remote
 STR_MESSAGES=Απομακρυσμένο
 STR_UPDATE_SOFTWARE=Ενημέρωση Λογισμικού
-STR_CONNECT_WEBDAV=Σύνδεση
-STR_DISCONNECT_WEBDAV=Αποσύνδεση
+STR_CONNECT=Σύνδεση
+STR_DISCONNECT=Αποσύνδεση
 STR_SEARCH=Αναζήτηση
 STR_REFRESH=Ανανέωση
 STR_SERVER=Διακομιστής
