--- a/data/assets/langs/Hungarian.ini
+++ b/data/assets/langs/Hungarian.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Helyi
 STR_REMOTE=Távoli
 STR_MESSAGES=Üzenetek
 STR_UPDATE_SOFTWARE=Szoftver frissítés
-STR_CONNECT_WEBDAV=Kapcsolódás
-STR_DISCONNECT_WEBDAV=Szétkapcsol
+STR_CONNECT=Kapcsolódás
+STR_DISCONNECT=Szétkapcsol
 STR_SEARCH=Keres
 STR_REFRESH=Frissít
 STR_SERVER=Szerver
