--- a/data/assets/langs/Indonesian.ini
+++ b/data/assets/langs/Indonesian.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Lokal
 STR_REMOTE=Remote
 STR_MESSAGES=Pesan
 STR_UPDATE_SOFTWARE=Perbarui Software
-STR_CONNECT_WEBDAV=Hubungkan
-STR_DISCONNECT_WEBDAV=Putuskan
+STR_CONNECT=Hubungkan
+STR_DISCONNECT=Putuskan
 STR_SEARCH=Cari
 STR_REFRESH=Refresh
 STR_SERVER=Server
