--- a/data/assets/langs/Italiano.ini
+++ b/data/assets/langs/Italiano.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Locale
 STR_REMOTE=Remoto
 STR_MESSAGES=Messaggi
 STR_UPDATE_SOFTWARE=Aggiornamento di sistema
-STR_CONNECT_WEBDAV=Connesione
-STR_DISCONNECT_WEBDAV=Disconnetti da
+STR_CONNECT=Connesione
+STR_DISCONNECT=Disconnetti da
 STR_SEARCH=Cerca
 STR_REFRESH=Aggiorna
 STR_SERVER=Server
