--- a/data/assets/langs/Japanese.ini
+++ b/data/assets/langs/Japanese.ini
@@ -4,8 +4,8 @@ STR_LOCAL=ローカル
 STR_REMOTE=リモート
 STR_MESSAGES=メッセージ
 STR_UPDATE_SOFTWARE=ソフトウェアの更新
-STR_CONNECT_WEBDAV=に接続
-STR_DISCONNECT_WEBDAV=を切断
+STR_CONNECT=に接続
+STR_DISCONNECT=を切断
 STR_SEARCH=検索
 STR_REFRESH=更新
 STR_SERVER=サーバー
