--- a/data/assets/langs/Korean.ini
+++ b/data/assets/langs/Korean.ini
@@ -4,8 +4,8 @@ STR_LOCAL=로컬
 STR_REMOTE=리모트
 STR_MESSAGES=메시지
 STR_UPDATE_SOFTWARE=소프트웨어 업데이트
-STR_CONNECT_WEBDAV=접속
-STR_DISCONNECT_WEBDAV=끊기
+STR_CONNECT=접속
+STR_DISCONNECT=끊기
 STR_SEARCH=검색
 STR_REFRESH=새로고침
 STR_SERVER=서버
