--- a/data/assets/langs/Polish.ini
+++ b/data/assets/langs/Polish.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Lokalny
 STR_REMOTE=Zdalny
 STR_MESSAGES=Wiadomości
 STR_UPDATE_SOFTWARE=Aktualizuj aplikację
-STR_CONNECT_WEBDAV=Połącz
-STR_DISCONNECT_WEBDAV=Rozłącz
+STR_CONNECT=Połącz
+STR_DISCONNECT=Rozłącz
 STR_SEARCH=Szukaj
 STR_REFRESH=Odśwież
 STR_SERVER=Serwer
