--- a/data/assets/langs/Portuguese_BR.ini
+++ b/data/assets/langs/Portuguese_BR.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Local
 STR_REMOTE=Remoto
 STR_MESSAGES=Mensagens
 STR_UPDATE_SOFTWARE=Atualizar Software
-STR_CONNECT_WEBDAV=Conectar
-STR_DISCONNECT_WEBDAV=Desconectar
+STR_CONNECT=Conectar
+STR_DISCONNECT=Desconectar
 STR_SEARCH=Pesquisar
 STR_REFRESH=Recarregar
 STR_SERVER=Servidor
