--- a/data/assets/langs/Romanian.ini
+++ b/data/assets/langs/Romanian.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Local
 STR_REMOTE=Distant
 STR_MESSAGES=Mesaje
 STR_UPDATE_SOFTWARE=Update de aplicație
-STR_CONNECT_WEBDAV=Conecteazăte
-STR_DISCONNECT_WEBDAV=Deconecteazăte
+STR_CONNECT=Conecteazăte
+STR_DISCONNECT=Deconecteazăte
 STR_SEARCH=Caută
 STR_REFRESH=Reîncarca
 STR_SERVER=Servere
