--- a/data/assets/langs/Russian.ini
+++ b/data/assets/langs/Russian.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Локальная
 STR_REMOTE=Дистанционная
 STR_MESSAGES=Сообщения
 STR_UPDATE_SOFTWARE=Обновить Программу
-STR_CONNECT_WEBDAV=Подключить
-STR_DISCONNECT_WEBDAV=Отключить
+STR_CONNECT=Подключить
+STR_DISCONNECT=Отключить
 STR_SEARCH=Найти
 STR_REFRESH=Обновить
 STR_SERVER=Сервер
