--- a/data/assets/langs/Ryukyuan.ini
+++ b/data/assets/langs/Ryukyuan.ini
@@ -4,8 +4,8 @@ STR_LOCAL=ローカル
 STR_REMOTE=リモート
 STR_MESSAGES=メッセージ
 STR_UPDATE_SOFTWARE=ソフトウェアぬ更新
-STR_CONNECT_WEBDAV=んかい接続
-STR_DISCONNECT_WEBDAV=切断
+STR_CONNECT=んかい接続
+STR_DISCONNECT=切断
 STR_SEARCH=検索
 STR_REFRESH=更新
 STR_SERVER=サーバー
