--- a/data/assets/langs/Simplified Chinese.ini
+++ b/data/assets/langs/Simplified Chinese.ini
@@ -4,8 +4,8 @@ STR_LOCAL=当地的
 STR_REMOTE=偏僻的
 STR_MESSAGES=留言
 STR_UPDATE_SOFTWARE=更新软件
-STR_CONNECT_WEBDAV=连接
-STR_DISCONNECT_WEBDAV=断开
+STR_CONNECT=连接
+STR_DISCONNECT=断开
 STR_SEARCH=搜索
 STR_REFRESH=刷新
 STR_SERVER=服务器
