--- a/data/assets/langs/Spanish.ini
+++ b/data/assets/langs/Spanish.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Local
 STR_REMOTE=Remoto
 STR_MESSAGES=Mensajes
 STR_UPDATE_SOFTWARE=Actualizar software
-STR_CONNECT_WEBDAV=Conectar
-STR_DISCONNECT_WEBDAV=Desconectar
+STR_CONNECT=Conectar
+STR_DISCONNECT=Desconectar
 STR_SEARCH=Buscar
 STR_REFRESH=Actualizar
 STR_SERVER=Servidor
