--- a/data/assets/langs/Thai.ini
+++ b/data/assets/langs/Thai.ini
@@ -4,8 +4,8 @@ STR_LOCAL=ภายใน
 STR_REMOTE=ระยะไกล
 STR_MESSAGES=ข้อความ
 STR_UPDATE_SOFTWARE=อัปเดตซอฟต์แวร์
-STR_CONNECT_WEBDAV=เชื่อมต่อ
-STR_DISCONNECT_WEBDAV=ยกเลิกการเชื่อมต่อ
+STR_CONNECT=เชื่อมต่อ
+STR_DISCONNECT=ยกเลิกการเชื่อมต่อ
 STR_SEARCH=ค้นหา
 STR_REFRESH=รีเฟรช
 STR_SERVER=เซิร์ฟเวอร์
