--- a/data/assets/langs/Traditional Chinese.ini
+++ b/data/assets/langs/Traditional Chinese.ini
@@ -4,8 +4,8 @@ STR_LOCAL=本地
 STR_REMOTE=遠端
 STR_MESSAGES=狀態
 STR_UPDATE_SOFTWARE=更新版本
-STR_CONNECT_WEBDAV=連接
-STR_DISCONNECT_WEBDAV=中斷
+STR_CONNECT=連接
+STR_DISCONNECT=中斷
 STR_SEARCH=搜尋
 STR_REFRESH=重新整理
 STR_SERVER=伺服器
