--- a/data/assets/langs/Turkish.ini
+++ b/data/assets/langs/Turkish.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Yerel
 STR_REMOTE=Uzaktan
 STR_MESSAGES=Mesajlar
 STR_UPDATE_SOFTWARE=Yazılımı Güncelle
-STR_CONNECT_WEBDAV=Bağlan
-STR_DISCONNECT_WEBDAV=Bağlantıyı kes
+STR_CONNECT=Bağlan
+STR_DISCONNECT=Bağlantıyı kes
 STR_SEARCH=Ara
 STR_REFRESH=Yenile
 STR_SERVER=Sunucu
