--- a/data/assets/langs/Galego.ini
+++ b/data/assets/langs/Galego.ini
@@ -4,8 +4,8 @@ STR_LOCAL=Local
 STR_REMOTE=Remoto
 STR_MESSAGES=Mensaxes
 STR_UPDATE_SOFTWARE=Actualizar Software
-STR_CONNECT_WEBDAV=Conectar
-STR_DISCONNECT_WEBDAV=Desconectar
+STR_CONNECT=Conectar
+STR_DISCONNECT=Desconectar
 STR_SEARCH=Busca
 STR_REFRESH=Actualizar
 STR_SERVER=Servidor
