add ability to extract zip files

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -86,3 +86,7 @@ STR_FAIL_TO_OBTAIN_GG_DL_MSG=Failed to obtain google download URL
 STR_AUTO_DELETE_TMP_PKG=Auto delete temporary downloaded pkg file after install
 STR_PROTOCOL_NOT_SUPPORTED=Protocol not supported
 STR_COULD_NOT_RESOLVE_HOST=Could not resolve hostname
+STR_EXTRACT=Extract
+STR_EXTRACTING=Extracting
+STR_FAILED_TO_EXTRACT=Failed to extract
+STR_EXTRACT_LOCATION=Extract Location
