add ability to create zip

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -90,3 +90,7 @@ STR_EXTRACT=Extract
 STR_EXTRACTING=Extracting
 STR_FAILED_TO_EXTRACT=Failed to extract
 STR_EXTRACT_LOCATION=Extract Location
+STR_COMPRESS=Compress
+STR_ZIP_FILE_PATH=Zip Filename
+STR_COMPRESSING=Compressing
+STR_ERROR_CREATE_ZIP=Error occured while creating zip
