add ability to extract 7zip and rar files

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -94,3 +94,4 @@ STR_COMPRESS=Compress
 STR_ZIP_FILE_PATH=Zip Filename
 STR_COMPRESSING=Compressing
 STR_ERROR_CREATE_ZIP=Error occured while creating zip
+STR_UNSUPPORTED_FILE_FORMAT=Unsupported compressed file format
