--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -95,3 +95,12 @@ STR_ZIP_FILE_PATH=Zip Filename
 STR_COMPRESSING=Compressing
 STR_ERROR_CREATE_ZIP=Error occured while creating zip
 STR_UNSUPPORTED_FILE_FORMAT=Unsupported compressed file format
+STR_CUT=Cut
+STR_COPY=Copy
+STR_PASTE=Paste
+STR_MOVING=Moving
+STR_COPYING=Copying
+STR_FAIL_MOVE_MSG=Failed to move file
+STR_FAIL_MOVE_MSG=Failed to copy file
+STR_CANT_MOVE_TO_SUBDIR_MSG=Cannot move parent directory to sub subdirectory
+STR_CANT_COPY_TO_SUBDIR_MSG=Cannot copy parent directory to sub subdirectory
