add cut/copy/paste function for webdav server

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -101,6 +101,7 @@ STR_PASTE=Paste
 STR_MOVING=Moving
 STR_COPYING=Copying
 STR_FAIL_MOVE_MSG=Failed to move file
-STR_FAIL_MOVE_MSG=Failed to copy file
+STR_FAIL_COPY_MSG=Failed to copy file
 STR_CANT_MOVE_TO_SUBDIR_MSG=Cannot move parent directory to sub subdirectory
 STR_CANT_COPY_TO_SUBDIR_MSG=Cannot copy parent directory to sub subdirectory
+STR_UNSUPPORTED_OPERATION_MSG=Operation not supported
