--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -105,3 +105,4 @@ STR_FAIL_COPY_MSG=Failed to copy file
 STR_CANT_MOVE_TO_SUBDIR_MSG=Cannot move parent directory to sub subdirectory
 STR_CANT_COPY_TO_SUBDIR_MSG=Cannot copy parent directory to sub subdirectory
 STR_UNSUPPORTED_OPERATION_MSG=Operation not supported
+STR_HTTP_PORT=Http Port
