--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -106,3 +106,4 @@ STR_CANT_MOVE_TO_SUBDIR_MSG=Cannot move parent directory to sub subdirectory
 STR_CANT_COPY_TO_SUBDIR_MSG=Cannot copy parent directory to sub subdirectory
 STR_UNSUPPORTED_OPERATION_MSG=Operation not supported
 STR_HTTP_PORT=Http Port
+STR_REINSTALL_CONFIRM_MSG=The content has already been installed. Do you want to continue installing
