add option to download and install if remote package install not possible

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -107,3 +107,7 @@ STR_CANT_COPY_TO_SUBDIR_MSG=Cannot copy parent directory to sub subdirectory
 STR_UNSUPPORTED_OPERATION_MSG=Operation not supported
 STR_HTTP_PORT=Http Port
 STR_REINSTALL_CONFIRM_MSG=The content has already been installed. Do you want to continue installing
+STR_REMOTE_NOT_SUPPORT_MSG=Remote server requires at least a username.
+STR_CANNOT_CONNECT_REMOTE_MSG=Remote HTTP Server not reachable.
+STR_DOWNLOAD_INSTALL_MSG=Remote Package Install not possible. Would you like to download package and install?
+STR_CHECKING_REMOTE_SERVER_MSG=Checking remote server for Remote Package Install.
