--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -114,3 +114,4 @@ STR_CHECKING_REMOTE_SERVER_MSG=Checking remote server for Remote Package Install
 STR_ENABLE_RPI=RPI
 STR_ENABLE_RPI_FTP_SMB_MSG=This option enables Remote Package Installation. This requires a HTTP Server setup on the same host sharing the same folder.
 STR_ENABLE_RPI_WEBDAV_MSG=This option enables Remote Package Installation. This requires a WebDAV Server with anonymous access that does not need username/password.
+STR_FILES=Files
