--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -112,6 +112,6 @@ STR_CANNOT_CONNECT_REMOTE_MSG=Remote HTTP Server not reachable.
 STR_DOWNLOAD_INSTALL_MSG=Remote Package Install not possible. Would you like to download package and install?
 STR_CHECKING_REMOTE_SERVER_MSG=Checking remote server for Remote Package Install.
 STR_ENABLE_RPI=RPI
-STR_ENABLE_RPI_FTP_SMB_MSG=This option enables Remote Package Installation. This requires a HTTP Server setup on the same host sharing the same folder.
-STR_ENABLE_RPI_WEBDAV_MSG=This option enables Remote Package Installation. This requires a WebDAV Server with anonymous access that does not need username/password.
+STR_ENABLE_RPI_FTP_SMB_MSG=This option enables Remote Package Installation. This requires a HTTP Server setup on the same host sharing the same folder with anonymous access.
+STR_ENABLE_RPI_WEBDAV_MSG=This option enables Remote Package Installation. This requires the Server with anonymous access that does not need username/password.
 STR_FILES=Files
