add a simple text editor

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -115,3 +115,8 @@ STR_ENABLE_RPI=RPI
 STR_ENABLE_RPI_FTP_SMB_MSG=This option enables Remote Package Installation. This requires a HTTP Server setup on the same host sharing the same folder with anonymous access.
 STR_ENABLE_RPI_WEBDAV_MSG=This option enables Remote Package Installation. This requires the Server with anonymous access that does not need username/password.
 STR_FILES=Files
+STR_EDITOR=Editor
+STR_SAVE=Save
+STR_MAX_EDIT_FILE_SIZE_MSG=Cannot edit files bigger than 32KB
+STR_DELETE_LINE=Delete Selected Line
+STR_INSERT_LINE=Insert Below Selected Line
