load methods for ShellUI sys modules

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -117,6 +117,6 @@ STR_ENABLE_RPI_WEBDAV_MSG=This option enables Remote Package Installation. This 
 STR_FILES=Files
 STR_EDITOR=Editor
 STR_SAVE=Save
-STR_MAX_EDIT_FILE_SIZE_MSG=Cannot edit files bigger than 32KB
+STR_MAX_EDIT_FILE_SIZE_MSG=Cannot edit files bigger than
 STR_DELETE_LINE=Delete Selected Line
 STR_INSERT_LINE=Insert Below Selected Line
