upload working but creates duplicates if existing file exists

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -129,3 +129,4 @@ STR_PERM_DRIVE_METADATA=View and manage metadata of files in your Google Drive
 STR_PERM_DRIVE_METADATA_RO=See information about your Google Drive files
 STR_GOOGLE_LOGIN_FAIL_MSG=Google login failed
 STR_GOOGLE_LOGIN_TIMEOUT_MSG=Google login timed out
+STR_NEW_FILE=New File
