add gui for google settings

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -130,3 +130,7 @@ STR_PERM_DRIVE_METADATA_RO=See information about your Google Drive files
 STR_GOOGLE_LOGIN_FAIL_MSG=Google login failed
 STR_GOOGLE_LOGIN_TIMEOUT_MSG=Google login timed out
 STR_NEW_FILE=New File
+STR_SETTINGS=Settings
+STR_CLIENT_ID=Client ID
+STR_CLIENT_SECRET=Client Secret
+STR_GLOBAL=Global
