--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -120,6 +120,7 @@ STR_SAVE=Save
 STR_MAX_EDIT_FILE_SIZE_MSG=Cannot edit files bigger than
 STR_DELETE_LINE=Delete Selected Line
 STR_INSERT_LINE=Insert Below Selected Line
+STR_MODIFIED=Modified
 STR_FAIL_GET_TOKEN_MSG=Failed to obtain an access token from
 STR_GET_TOKEN_SUCCESS_MSG=Login Success. You may close the browser and return to the application
 STR_PERM_DRIVE=See, edit, create, and delete all of your Google Drive files
