add copy/paste function in text editor

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -136,3 +136,5 @@ STR_CLIENT_ID=Client ID
 STR_CLIENT_SECRET=Client Secret
 STR_GLOBAL=Global
 STR_GOOGLE=Google
+STR_COPY_LINE=Copy selected line
+STR_PASTE_LINE=Paste into selected line
