some bug fixes related to RPI and add option to show hidden files

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -138,3 +138,4 @@ STR_GLOBAL=Global
 STR_GOOGLE=Google
 STR_COPY_LINE=Copy selected line
 STR_PASTE_LINE=Paste into selected line
+STR_SHOW_HIDDEN_FILES=Show hidden files
