implement shared team drives and set default local/remote folders

--- a/data/assets/langs/Portuguese_BR.ini
+++ b/data/assets/langs/Portuguese_BR.ini
@@ -59,3 +59,83 @@ STR_FAIL_DEL_DIR_MSG=Falha ao excluir o diretório
 STR_DELETING=Excluindo
 STR_FAIL_DEL_FILE_MSG=Falha ao excluir o arquivo
 STR_DELETED=Excluido
+STR_LINK=Link
+STR_SHARE=Compartilhar
+STR_FAILED=Falha 310
+STR_FAIL_CREATE_LOCAL_FILE_MSG=310 Falha ao criar arquivo no local
+STR_INSTALL=Instalar
+STR_INSTALLING=Instalando
+STR_INSTALL_SUCCESS=Sucesso
+STR_INSTALL_FAILED=Falha
+STR_INSTALL_SKIPPED=Pular
+STR_CHECK_HTTP_MSG=Verificando a conexão com o servidor HTTP remoto
+STR_FAILED_HTTP_CHECK=Falha ao conectar-se ao servidor HTTP
+STR_REMOTE_NOT_HTTP=Remoto não é um servidor HTTP
+STR_INSTALL_FROM_DATA_MSG=O pacote não está na pasta /data ou /mnt/usbX
+STR_ALREADY_INSTALLED_MSG=O pacote já está instalado!
+STR_INSTALL_FROM_URL=Instalar a partir do URL?
+STR_CANNOT_READ_PKG_HDR_MSG=Não foi possível ler as informações do cabeçalho do pacote
+STR_FAVORITE_URLS=URLs favoritas
+STR_SLOT=Slot
+STR_EDIT=Editar
+STR_ONETIME_URL=Url único
+STR_NOT_A_VALID_PACKAGE=Não é um pacote válido
+STR_WAIT_FOR_INSTALL_MSG=Aguardando o pacote terminar de instalar
+STR_FAIL_INSTALL_TMP_PKG_MSG=Falha ao instalar o arquivo PKG. Exclua o pacote tmp manualmente
+STR_FAIL_TO_OBTAIN_GG_DL_MSG=Falha ao obter o URL de download do Google
+STR_AUTO_DELETE_TMP_PKG=Excluir automaticamente o arquivo PKG temporário baixado após a instalação?
+STR_PROTOCOL_NOT_SUPPORTED=Protocolo não suportado
+STR_COULD_NOT_RESOLVE_HOST=Não foi possível resolver o nome do Host
+STR_EXTRACT=Extrair
+STR_EXTRACTING=Extraindo
+STR_FAILED_TO_EXTRACT=Falha ao extrair
+STR_EXTRACT_LOCATION=Local de Extração
+STR_COMPRESS=Comprimir
+STR_ZIP_FILE_PATH=Nome do arquivo zip
+STR_COMPRESSING=Comprimindo
+STR_ERROR_CREATE_ZIP=Ocorreu um erro ao criar o zip
+STR_UNSUPPORTED_FILE_FORMAT=Formato de arquivo compactado não suportado
+STR_CUT=Recortar
+STR_COPY=Copiar
+STR_PASTE=Colar
+STR_MOVING=Movendo
+STR_COPYING=Copiando
+STR_FAIL_MOVE_MSG=Falha ao mover o arquivo
+STR_FAIL_COPY_MSG=Falha ao copiar o arquivo
+STR_CANT_MOVE_TO_SUBDIR_MSG=Não é possível mover o diretório pai para o subdiretório
+STR_CANT_COPY_TO_SUBDIR_MSG=Não é possível copiar o diretório pai para o subdiretório
+STR_UNSUPPORTED_OPERATION_MSG=Operação não suportada
+STR_HTTP_PORT=Porta HTTP
+STR_REINSTALL_CONFIRM_MSG=O conteúdo já foi instalado. Deseja continuar instalando?
+STR_REMOTE_NOT_SUPPORT_MSG=A instalação remota de pacotes não é compatível com servidores protegidos.
+STR_CANNOT_CONNECT_REMOTE_MSG=Servidor HTTP remoto não esta acessível.
+STR_DOWNLOAD_INSTALL_MSG=A instalação remota do pacote não é possível. Você gostaria de baixar o pacote e instalar?
+STR_CHECKING_REMOTE_SERVER_MSG=Verificando servidor remoto para instalação de pacote remoto.
+STR_ENABLE_RPI=RPI
+STR_ENABLE_RPI_FTP_SMB_MSG=Esta opção permite a instalação remota de pacotes. Isso requer uma configuração de servidor HTTP no mesmo Host compartilhando a mesma pasta com acesso anônimo.
+STR_ENABLE_RPI_WEBDAV_MSG=Esta opção permite a instalação remota de pacotes. Isso requer o servidor com acesso anônimo que não precisa de nome de usuário/senha.
+STR_FILES=Arquivos
+STR_EDITOR=Editar
+STR_SAVE=Salvar
+STR_MAX_EDIT_FILE_SIZE_MSG=Não é possível editar arquivos maiores que
+STR_DELETE_LINE=Excluir linha selecionada
+STR_INSERT_LINE=Inserir Abaixo da Linha Selecionada
+STR_MODIFIED=Modificar
+STR_FAIL_GET_TOKEN_MSG=Falha ao obter o token de acesso de
+STR_GET_TOKEN_SUCCESS_MSG=Login realizado com sucesso. Você pode fechar o navegador e retornar ao aplicativo
+STR_PERM_DRIVE=Veja, Edite, Crie e Exclua todos os seus arquivos do Google Drive
+STR_PERM_DRIVE_APPDATA=Veja, Edite, Crie e Exclua seus próprios dados de configuração em seu Google Drive
+STR_PERM_DRIVE_FILE=Veja, Edite, Crie e Exclua apenas os arquivos específicos do Google Drive que você usa com este aplicativo
+STR_PERM_DRIVE_METADATA=Visualize e Gerencie metadados de arquivos em seu Google Drive
+STR_PERM_DRIVE_METADATA_RO=Ver informações sobre seus arquivos do Google Drive
+STR_GOOGLE_LOGIN_FAIL_MSG=Falha no login do Google
+STR_GOOGLE_LOGIN_TIMEOUT_MSG=O login do Google expirou
+STR_NEW_FILE=Novo arquivo
+STR_SETTINGS=Configurações
+STR_CLIENT_ID=ID do Cliente Google
+STR_CLIENT_SECRET=Segredo do cliente Google
+STR_GLOBAL=Global
+STR_GOOGLE=Google
+STR_COPY_LINE=Copiar linha selecionada
+STR_PASTE_LINE=Colar na linha selecionada
+STR_SHOW_HIDDEN_FILES=Mostrar arquivos ocultos
