--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -139,3 +139,5 @@ STR_GOOGLE=Google
 STR_COPY_LINE=Copy selected line
 STR_PASTE_LINE=Paste into selected line
 STR_SHOW_HIDDEN_FILES=Show hidden files
+STR_SET_DEFAULT_DIRECTORY=Set Default Folder
+STR_SET_DEFAULT_DIRECTORY_MSG=has being set as default direcotry
