add ability to view images

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -141,3 +141,4 @@ STR_PASTE_LINE=Paste into selected line
 STR_SHOW_HIDDEN_FILES=Show hidden files
 STR_SET_DEFAULT_DIRECTORY=Set Default Folder
 STR_SET_DEFAULT_DIRECTORY_MSG=has being set as default direcotry
+STR_VIEW_IMAGE=View Image
