add missing string

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -142,3 +142,4 @@ STR_SHOW_HIDDEN_FILES=Show hidden files
 STR_SET_DEFAULT_DIRECTORY=Set Default Folder
 STR_SET_DEFAULT_DIRECTORY_MSG=has being set as default direcotry
 STR_VIEW_IMAGE=View Image
+STR_VIEW_PKG_INFO=Package Information
