add NFS support

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -143,3 +143,5 @@ STR_SET_DEFAULT_DIRECTORY=Set Default Folder
 STR_SET_DEFAULT_DIRECTORY_MSG=has being set as default direcotry
 STR_VIEW_IMAGE=View Image
 STR_VIEW_PKG_INFO=Package Information
+STR_NFS_EXP_PATH_MISSING_MSG=NFS export path missing in URL
+STR_FAIL_INIT_NFS_CONTEXT=Failed to init NFS context
