--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -145,3 +145,8 @@ STR_VIEW_IMAGE=View Image
 STR_VIEW_PKG_INFO=Package Information
 STR_NFS_EXP_PATH_MISSING_MSG=NFS export path missing in URL
 STR_FAIL_INIT_NFS_CONTEXT=Failed to init NFS context
+STR_FAIL_MOUNT_NFS_MSG=Failed to mount NFS share
+STR_WEB_SERVER=Web Server
+STR_ENABLE=Enable
+STR_COMPRESSED_FILE_PATH=Compressed Files Location
+STR_COMPRESSED_FILE_PATH_MSG=Location of where compressed files are stored on the web server
