add ability to install fpkgs directly direct from remote servers

--- a/data/assets/langs/Portuguese_BR.ini
+++ b/data/assets/langs/Portuguese_BR.ini
@@ -112,8 +112,8 @@ STR_CANNOT_CONNECT_REMOTE_MSG=Servidor HTTP remoto não esta acessível.
 STR_DOWNLOAD_INSTALL_MSG=A instalação remota do pacote não é possível. Você gostaria de baixar o pacote e instalar?
 STR_CHECKING_REMOTE_SERVER_MSG=Verificando servidor remoto para instalação de pacote remoto.
 STR_ENABLE_RPI=RPI
-STR_ENABLE_RPI_FTP_SMB_MSG=Esta opção permite a instalação remota de pacotes. Isso requer uma configuração de servidor HTTP no mesmo Host compartilhando a mesma pasta com acesso anônimo.
-STR_ENABLE_RPI_WEBDAV_MSG=Esta opção permite a instalação remota de pacotes. Isso requer o servidor com acesso anônimo que não precisa de nome de usuário/senha.
+STR_ENABLE_RPI_FTP_SMB_MSG=Esta opção permite a instalação remota de pacotes.
+STR_ENABLE_RPI_WEBDAV_MSG=Esta opção permite a instalação remota de pacotes.
 STR_FILES=Arquivos
 STR_EDITOR=Editar
 STR_SAVE=Salvar
