add ability to install shared URL from web interface

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -82,7 +82,7 @@ STR_ONETIME_URL=One Time Url
 STR_NOT_A_VALID_PACKAGE=Not a valid Package
 STR_WAIT_FOR_INSTALL_MSG=Waiting for Package to finish installing
 STR_FAIL_INSTALL_TMP_PKG_MSG=Failed to install pkg file. Please delete the tmp pkg manually
-STR_FAIL_TO_OBTAIN_GG_DL_MSG=Failed to obtain google download URL
+STR_FAIL_TO_OBTAIN_GG_DL_MSG=Failed to obtain download URL
 STR_AUTO_DELETE_TMP_PKG=Auto delete temporary downloaded pkg file after install
 STR_PROTOCOL_NOT_SUPPORTED=Protocol not supported
 STR_COULD_NOT_RESOLVE_HOST=Could not resolve hostname
