add ability to install via alldebrid

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -150,3 +150,9 @@ STR_WEB_SERVER=Web Server
 STR_ENABLE=Enable
 STR_COMPRESSED_FILE_PATH=Compressed Files Location
 STR_COMPRESSED_FILE_PATH_MSG=Location of where compressed files are stored on the web server
+STR_ALLDEBRID=AllDebrid
+STR_API_KEY=API Key
+STR_CANT_EXTRACT_URL_MSG=Couldn't extract download url
+STR_FAIL_INSTALL_FROM_URL_MSG=Failed to install from URL
+STR_INVALID_URL=InValid URL
+STR_ALLDEBRID_API_KEY_MISSING_MSG=To use this function, an API Key needs to be configured in the ezRemote Client settings
