add ability to install pkg inside compress files

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -157,3 +157,4 @@ STR_FAIL_INSTALL_FROM_URL_MSG=Failed to install from URL
 STR_INVALID_URL=InValid URL
 STR_ALLDEBRID_API_KEY_MISSING_MSG=To use this function, an API Key needs to be configured in the ezRemote Client settings
 STR_LANGUAGE=Language
+STR_TEMP_DIRECTORY=Temp Directory
