add support for realdebrid

--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -158,3 +158,5 @@ STR_INVALID_URL=InValid URL
 STR_ALLDEBRID_API_KEY_MISSING_MSG=To use this function, an API Key needs to be configured in the ezRemote Client settings
 STR_LANGUAGE=Language
 STR_TEMP_DIRECTORY=Temp Directory
+STR_REALDEBRID=Real-Debrid
+STR_BACKGROUND_INSTALL_INPROGRESS=Package install is running in the background. Don't close the app while install is in progress
