fix install for large patch pkg

--- a/data/assets/langs/Simplified Chinese.ini
+++ b/data/assets/langs/Simplified Chinese.ini
@@ -1,8 +1,8 @@
 STR_CONNECTION_SETTINGS=连接设置
-STR_SITE=地点
-STR_LOCAL=当地的
-STR_REMOTE=偏僻的
-STR_MESSAGES=留言
+STR_SITE=站点
+STR_LOCAL=本地
+STR_REMOTE=远程路径
+STR_MESSAGES=信息
 STR_UPDATE_SOFTWARE=更新软件
 STR_CONNECT=连接
 STR_DISCONNECT=断开
@@ -11,51 +11,123 @@ STR_REFRESH=刷新
 STR_SERVER=服务器
 STR_USERNAME=用户名
 STR_PASSWORD=密码
-STR_PORT=港口
-STR_PASV=帕夫
+STR_PORT=端口
+STR_PASV=被动模式
 STR_DIRECTORY=目录
-STR_FILTER=筛选
-STR_YES=是的
-STR_NO=不
+STR_FILTER=过滤器
+STR_YES=是
+STR_NO=否
 STR_CANCEL=取消
 STR_CONTINUE=继续
 STR_CLOSE=关闭
 STR_FOLDER=文件夹
 STR_FILE=文件
 STR_TYPE=类型
-STR_NAME=姓名
-STR_SIZE=尺寸
+STR_NAME=名称
+STR_SIZE=大小
 STR_DATE=日期
 STR_NEW_FOLDER=新建文件夹
-STR_RENAME=改名
+STR_RENAME=重命名
 STR_DELETE=删除
 STR_UPLOAD=上传
 STR_DOWNLOAD=下载
 STR_SELECT_ALL=全选
-STR_CLEAR_ALL=全部清除
-STR_UPLOADING=上传
-STR_DOWNLOADING=下载
+STR_CLEAR_ALL=取消全选
+STR_UPLOADING=上传中
+STR_DOWNLOADING=下载中
 STR_OVERWRITE=覆盖
-STR_DONT_OVERWRITE=不要覆盖
-STR_ASK_FOR_CONFIRM=要求确认
-STR_DONT_ASK_CONFIRM=不要要求确认
+STR_DONT_OVERWRITE=不覆盖
+STR_ASK_FOR_CONFIRM=确认请求
+STR_DONT_ASK_CONFIRM=不确认请求
 STR_ALLWAYS_USE_OPTION=始终使用此选项，不再询问
 STR_ACTIONS=行动
 STR_CONFIRM=确认
 STR_OVERWRITE_OPTIONS=覆盖选项
-STR_PROPERTIES=特性
-STR_PROGRESS=进步
+STR_PROPERTIES=属性
+STR_PROGRESS=进度
 STR_UPDATES=更新
-STR_DEL_CONFIRM_MSG=您确定要删除此文件/文件夹吗？
-STR_CANCEL_ACTION_MSG=取消。 等待最后一个动作完成
+STR_DEL_CONFIRM_MSG=您确定要删除此文件/文件夹？
+STR_CANCEL_ACTION_MSG=取消中。请等待最后一个操作结束
 STR_FAIL_UPLOAD_MSG=上传文件失败
 STR_FAIL_DOWNLOAD_MSG=下载文件失败
 STR_FAIL_READ_LOCAL_DIR_MSG=读取目录内容失败或文件夹不存在。
 STR_CONNECTION_CLOSE_ERR_MSG=426 连接已关闭。
 STR_REMOTE_TERM_CONN_MSG=426 远程服务器已终止连接。
-STR_FAIL_LOGIN_MSG=300 登录失败。 请检查您的用户名或密码。
-STR_FAIL_TIMEOUT_MSG=426 失败。 连接超时。
+STR_FAIL_LOGIN_MSG=300 登录失败。请检查您的用户名或密码。
+STR_FAIL_TIMEOUT_MSG=426 失败。连接超时。
 STR_FAIL_DEL_DIR_MSG=删除目录失败
-STR_DELETING=删除
+STR_DELETING=删除中
 STR_FAIL_DEL_FILE_MSG=删除文件失败
-STR_DELETED=已删除
+STR_DELETED=删除完毕
+STR_LINK=链接
+STR_SHARE=分享
+STR_FAILED=310 失败
+STR_FAIL_CREATE_LOCAL_FILE_MSG=310 无法本地创建文件
+STR_INSTALL=安装
+STR_INSTALLING=正在安装中
+STR_INSTALL_SUCCESS=成功
+STR_INSTALL_FAILED=失败
+STR_INSTALL_SKIPPED=已忽略
+STR_CHECK_HTTP_MSG=正在检查与远程HTTP服务器的连接
+STR_FAILED_HTTP_CHECK=连接到HTTP服务器失败
+STR_REMOTE_NOT_HTTP=远程不是HTTP服务器
+STR_INSTALL_FROM_DATA_MSG=文件包不在/data或/mnt/usbX文件夹中
+STR_ALREADY_INSTALLED_MSG=文件包已经安装
+STR_INSTALL_FROM_URL=从网址安装
+STR_CANNOT_READ_PKG_HDR_MSG=无法读取包文件头信息
+STR_FAVORITE_URLS=收藏网址
+STR_SLOT=槽位
+STR_EDIT=编辑
+STR_ONETIME_URL=一次性网址
+STR_NOT_A_VALID_PACKAGE=不是有效的程序包
+STR_WAIT_FOR_INSTALL_MSG=正在等待包完成安装
+STR_FAIL_INSTALL_TMP_PKG_MSG=未能安装pkg文件。请手动删除tmp pkg
+STR_AUTO_DELETE_TMP_PKG=安装后自动删除临时下载的pkg文件
+STR_PROTOCOL_NOT_SUPPORTED=不支持该协议
+STR_COULD_NOT_RESOLVE_HOST=无法解析主机名
+STR_EXTRACT=提取
+STR_EXTRACTING=提取中
+STR_FAILED_TO_EXTRACT=提取失败
+STR_EXTRACT_LOCATION=提取位置
+STR_COMPRESS=压缩
+STR_ZIP_FILE_PATH=Zip 文件名
+STR_COMPRESSING=压缩中
+STR_ERROR_CREATE_ZIP=正在创建zip文件时出现错误
+STR_UNSUPPORTED_FILE_FORMAT=不支持的压缩文件格式
+STR_CUT=剪切
+STR_COPY=复制
+STR_PASTE=粘贴
+STR_MOVING=移动中
+STR_COPYING=复制中
+STR_FAIL_MOVE_MSG=移动文件失败
+STR_FAIL_COPY_MSG=复制文件事变
+STR_CANT_MOVE_TO_SUBDIR_MSG=无法将父目录移动到子目录
+STR_CANT_COPY_TO_SUBDIR_MSG=无法将父目录复制到子目录
+STR_UNSUPPORTED_OPERATION_MSG=不支持操作
+STR_HTTP_PORT=Http 端口
+STR_REINSTALL_CONFIRM_MSG=内容已安装。是否要继续安装
+STR_REMOTE_NOT_SUPPORT_MSG=受保护的服务器不支持远程程序包安装。
+STR_CANNOT_CONNECT_REMOTE_MSG=无法访问远程HTTP服务器。
+STR_DOWNLOAD_INSTALL_MSG=无法安装远程程序包。是否下载软件包并进行安装？
+STR_CHECKING_REMOTE_SERVER_MSG=正在检查远程服务器的远程包安装。
+STR_FILES=文件
+STR_EDITOR=编辑器
+STR_SAVE=保存
+STR_MAX_EDIT_FILE_SIZE_MSG=无法编辑大于全部的文件。
+STR_DELETE_LINE=删除所选行
+STR_INSERT_LINE=在所选行下方插入
+STR_MODIFIED=已修改
+STR_FAIL_GET_TOKEN_MSG=无法从获取访问令牌
+STR_GET_TOKEN_SUCCESS_MSG=登录成功。您可以关闭浏览器并返回应用程序
+STR_NEW_FILE=新文件
+STR_SETTINGS=设置
+STR_GLOBAL=全局
+STR_COPY_LINE=复制所选行
+STR_PASTE_LINE=粘贴到所选行
+STR_SHOW_HIDDEN_FILES=显示隐藏文件
+STR_SET_DEFAULT_DIRECTORY=设置默认文件夹
+STR_SET_DEFAULT_DIRECTORY_MSG=已设置为默认目录
+STR_NFS_EXP_PATH_MISSING_MSG=URL中缺少NFS导出路径
+STR_FAIL_INIT_NFS_CONTEXT=无法初始化NFS上下文
+STR_FAIL_MOUNT_NFS_MSG=挂在 NFS 共享失败
+STR_VIEW_IMAGE=查看图片
