--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -160,3 +160,4 @@ STR_LANGUAGE=Language
 STR_TEMP_DIRECTORY=Temp Directory
 STR_REALDEBRID=Real-Debrid
 STR_BACKGROUND_INSTALL_INPROGRESS=Package install is running in the background. Don't close the app while install is in progress
+STR_ENABLE_DISC_CACHE_MSG=Enable disk caching. Can improve package install speed in cases where connection to remote is slow
