enchancements to install from url

--- a/data/assets/langs/Turkish.ini
+++ b/data/assets/langs/Turkish.ini
@@ -1,75 +1,133 @@
 STR_CONNECTION_SETTINGS=Bağlantı Ayarları
 STR_SITE=Site
 STR_LOCAL=Yerel
-STR_REMOTE=Uzaktan
+STR_REMOTE=Uzak
 STR_MESSAGES=Mesajlar
 STR_UPDATE_SOFTWARE=Yazılımı Güncelle
 STR_CONNECT=Bağlan
-STR_DISCONNECT=Bağlantıyı kes
-STR_SEARCH=Ara
+STR_DISCONNECT=Bağlantıyı Kes
+STR_SEARCH=Arama
 STR_REFRESH=Yenile
 STR_SERVER=Sunucu
 STR_USERNAME=Kullanıcı Adı
-STR_PASSWORD=Şifre
+STR_PASSWORD=Parola
 STR_PORT=Port
-STR_PASV=Pasv
+STR_PASV=Pasif
 STR_DIRECTORY=Dizin
 STR_FILTER=Filtre
 STR_YES=Evet
 STR_NO=Hayır
 STR_CANCEL=İptal
-STR_CONTINUE=Devam
+STR_CONTINUE=Devam Et
 STR_CLOSE=Kapat
 STR_FOLDER=Klasör
 STR_FILE=Dosya
-STR_TYPE=Tip
+STR_TYPE=Tür
 STR_NAME=Ad
 STR_SIZE=Boyut
 STR_DATE=Tarih
 STR_NEW_FOLDER=Yeni Klasör
 STR_RENAME=Yeniden Adlandır
 STR_DELETE=Sil
-STR_UPLOAD=Karşıya Yükle
+STR_UPLOAD=Yükle
 STR_DOWNLOAD=İndir
-STR_SELECT_ALL=Tümünü Seç
-STR_CLEAR_ALL=Tümünü Temizle
-STR_UPLOADING=Karşıya Yükleniyor
+STR_SELECT_ALL=Hepsini Seç
+STR_CLEAR_ALL=Hepsini Temizle
+STR_UPLOADING=Yükleniyor
 STR_DOWNLOADING=İndiriliyor
-STR_OVERWRITE=Üzerine yaz
-STR_DONT_OVERWRITE=Üzerine yazma
-STR_ASK_FOR_CONFIRM=Onaylamak için sor
-STR_DONT_ASK_CONFIRM=Onaylamak için sorma
-STR_ALLWAYS_USE_OPTION=Daima bu seçeneği kullan ve bir daha sorma
-STR_ACTIONS=Eylemler
+STR_OVERWRITE=Üzerine Yaz
+STR_DONT_OVERWRITE=Üzerine Yazma
+STR_ASK_FOR_CONFIRM=Onay İste
+STR_DONT_ASK_CONFIRM=Onay İsteme
+STR_ALLWAYS_USE_OPTION=Bu seçeneği her zaman kullan ve bir daha sorma
+STR_ACTIONS=İşlemler
 STR_CONFIRM=Onayla
-STR_OVERWRITE_OPTIONS=Ayarların üzerine yaz
+STR_OVERWRITE_OPTIONS=Üzerine Yazma Seçenekleri
 STR_PROPERTIES=Özellikler
-STR_PROGRESS=Durum
+STR_PROGRESS=İlerleme
 STR_UPDATES=Güncellemeler
 STR_DEL_CONFIRM_MSG=Bu dosya(ları)/klasör(leri) silmek istediğinizden emin misiniz?
-STR_CANCEL_ACTION_MSG=İptal ediliyor. Son işlemin tamamlanması bekleniyor
-STR_FAIL_UPLOAD_MSG=Dosya karşıya yükleme başarısız
-STR_FAIL_DOWNLOAD_MSG=Dosya indirme başarısız
-STR_FAIL_READ_LOCAL_DIR_MSG=Dizindeki içerikler okunamadı ya da öyle bir klasör yok
-STR_CONNECTION_CLOSE_ERR_MSG=426 Bağlantı kesildi.
-STR_REMOTE_TERM_CONN_MSG=426 Uzaktan Sunucu bağlantıyı kesti.
-STR_FAIL_LOGIN_MSG=300 Giriş başarısız. Lütfen kullanıcı adınızı ve şifrenizi kontrol edin.
+STR_CANCEL_ACTION_MSG=İptal ediliyor. Son eylemin tamamlanması bekleniyor
+STR_FAIL_UPLOAD_MSG=Dosya yüklenemedi
+STR_FAIL_DOWNLOAD_MSG=Dosya indirilemedi
+STR_FAIL_READ_LOCAL_DIR_MSG=Yerel dizinin içeriği okunamadı veya klasör mevcut değil.
+STR_CONNECTION_CLOSE_ERR_MSG=426 Bağlantı kapatıldı.
+STR_REMOTE_TERM_CONN_MSG=426 Uzak Sunucu bağlantıyı sonlandırdı.
+STR_FAIL_LOGIN_MSG=300 Giriş Başarısız. Lütfen kullanıcı adınızı veya şifrenizi kontrol edin.
 STR_FAIL_TIMEOUT_MSG=426 Başarısız. Bağlantı zaman aşımına uğradı.
-STR_FAIL_DEL_DIR_MSG=Dizin silme başarısız
+STR_FAIL_DEL_DIR_MSG=Dizin silinemedi
 STR_DELETING=Siliniyor
-STR_FAIL_DEL_FILE_MSG=Dosya silme başarısız
+STR_FAIL_DEL_FILE_MSG=Dosya silinemedi
 STR_DELETED=Silindi
-STR_LINK=Link
+STR_LINK=Bağlantı
 STR_SHARE=Paylaş
 STR_FAILED=310 Başarısız
-STR_FAIL_CREATE_LOCAL_FILE_MSG=310 Yerelde dosya oluşturulumu başarısız
-STR_INSTALL=Yükle
-STR_INSTALLING=Yükleniyor
+STR_FAIL_CREATE_LOCAL_FILE_MSG=310 Yerelde dosya oluşturulamadı
+STR_INSTALL=Kur
+STR_INSTALLING=Kuruluyor
 STR_INSTALL_SUCCESS=Başarılı
 STR_INSTALL_FAILED=Başarısız
 STR_INSTALL_SKIPPED=Atlandı
-STR_CHECK_HTTP_MSG=Uzaktan HTTP Sunucusu bağlantısı kontrol ediliyor
-STR_FAILED_HTTP_CHECK=HTTP Sunucusuna bağlantı başarısız
-STR_REMOTE_NOT_HTTP=Uzaktaki HTTP Sunucusu değil
-STR_INSTALL_FROM_DATA_MSG=Paket /data ya da /mnt/usbX dizininde değil
+STR_CHECK_HTTP_MSG=Uzak HTTP Sunucusuna bağlantı kontrol ediliyor
+STR_FAILED_HTTP_CHECK=HTTP Sunucusuna bağlanılamadı
+STR_REMOTE_NOT_HTTP=Uzak bir HTTP Sunucusu değil
+STR_INSTALL_FROM_DATA_MSG=Paket /data veya /mnt/usbX klasöründe değil
 STR_ALREADY_INSTALLED_MSG=Paket zaten kurulu
+STR_INSTALL_FROM_URL=URL'den Kur
+STR_CANNOT_READ_PKG_HDR_MSG=Paket başlık bilgisi okunamadı
+STR_FAVORITE_URLS=Favori URL'ler
+STR_SLOT=Yuva
+STR_EDIT=Düzenle
+STR_ONETIME_URL=Tek Seferlik URL
+STR_NOT_A_VALID_PACKAGE=Geçerli bir Paket değil
+STR_WAIT_FOR_INSTALL_MSG=Paketin kurulmasının tamamlanması bekleniyor
+STR_FAIL_INSTALL_TMP_PKG_MSG=Geçici paketin kurulumu başarısız. Lütfen geçici paketi manuel olarak silin
+STR_AUTO_DELETE_TMP_PKG=Kurulumdan sonra geçici indirilen paketi otomatik olarak sil
+STR_PROTOCOL_NOT_SUPPORTED=Protokol desteklenmiyor
+STR_COULD_NOT_RESOLVE_HOST=Ana bilgisayar adı çözülemedi
+STR_EXTRACT=Çıkart
+STR_EXTRACTING=Çıkartılıyor
+STR_FAILED_TO_EXTRACT=Çıkartma başarısız oldu
+STR_EXTRACT_LOCATION=Çıkartılacak Konum
+STR_COMPRESS=Sıkıştır
+STR_ZIP_FILE_PATH=Zip Dosya Adı
+STR_COMPRESSING=Sıkıştırılıyor
+STR_ERROR_CREATE_ZIP=Zip oluşturulurken hata oluştu
+STR_UNSUPPORTED_FILE_FORMAT=Desteklenmeyen sıkıştırılmış dosya formatı
+STR_CUT=Kes
+STR_COPY=Kopyala
+STR_PASTE=Yapıştır
+STR_MOVING=Taşınıyor
+STR_COPYING=Kopyalanıyor
+STR_FAIL_MOVE_MSG=Dosya taşınamadı
+STR_FAIL_COPY_MSG=Dosya kopyalanamadı
+STR_CANT_MOVE_TO_SUBDIR_MSG=Ana dizin alt dizinine taşınamaz
+STR_CANT_COPY_TO_SUBDIR_MSG=Ana dizin alt dizinine kopyalanamaz
+STR_UNSUPPORTED_OPERATION_MSG=Desteklenmeyen işlem
+STR_HTTP_PORT=Http Portu
+STR_REINSTALL_CONFIRM_MSG=İçerik zaten kurulu. Kuruluma devam etmek istiyor musunuz?
+STR_REMOTE_NOT_SUPPORT_MSG=Korunan sunucular için uzak paket kurulumu desteklenmiyor.
+STR_CANNOT_CONNECT_REMOTE_MSG=Uzak HTTP Sunucusuna bağlanılamıyor.
+STR_DOWNLOAD_INSTALL_MSG=Uzak Paket Kurulumu mümkün değil. Paketi indirip kurmak ister misiniz?
+STR_CHECKING_REMOTE_SERVER_MSG=Uzak Paket Kurulumu için uzak sunucu kontrol ediliyor.
+STR_FILES=Dosyalar
+STR_EDITOR=Düzenleyici
+STR_SAVE=Kaydet
+STR_MAX_EDIT_FILE_SIZE_MSG=Boyutu şu büyüklükten büyük dosyalar düzenlenemez
+STR_DELETE_LINE=Seçili Satırı Sil
+STR_INSERT_LINE=Seçili Satırın Altına Ekle
+STR_MODIFIED=Değiştirildi
+STR_FAIL_GET_TOKEN_MSG=Erişim token'ı alınamadı
+STR_GET_TOKEN_SUCCESS_MSG=Giriş Başarılı. Tarayıcıyı kapatıp uygulamaya dönebilirsiniz
+STR_NEW_FILE=Yeni Dosya
+STR_SETTINGS=Ayarlar
+STR_GLOBAL=Genel
+STR_COPY_LINE=Seçili satırı kopyala
+STR_PASTE_LINE=Seçili satıra yapıştır
+STR_SHOW_HIDDEN_FILES=Gizli dosyaları göster
+STR_SET_DEFAULT_DIRECTORY=Varsayılan Klasörü Ayarla
+STR_SET_DEFAULT_DIRECTORY_MSG=varsayılan dizin olarak ayarlandı
+STR_NFS_EXP_PATH_MISSING_MSG=URL'de NFS dışa aktarma yolu eksik
+STR_FAIL_INIT_NFS_CONTEXT=NFS bağlamı başlatılamadı
+STR_FAIL_MOUNT_NFS_MSG=NFS paylaşımı bağlanamadı
+STR_VIEW_IMAGE=Görüntüyü Görüntüle
