--- a/data/assets/langs/English.ini
+++ b/data/assets/langs/English.ini
@@ -112,8 +112,8 @@ STR_CANNOT_CONNECT_REMOTE_MSG=Remote HTTP Server not reachable.
 STR_DOWNLOAD_INSTALL_MSG=Remote Package Install not possible. Would you like to download package and install instead?
 STR_CHECKING_REMOTE_SERVER_MSG=Checking remote server for Remote Package Install.
 STR_ENABLE_RPI=RPI
-STR_ENABLE_RPI_FTP_SMB_MSG=This option enables Remote Package Installation via embedded Web Server.
-STR_ENABLE_RPI_WEBDAV_MSG==This option enables Remote Package Installation via embedded Web Server.
+STR_ENABLE_RPI_FTP_SMB_MSG=This option enables Remote Package Installation via embedded Web Server proxy.
+STR_ENABLE_RPI_WEBDAV_MSG=This option enables Remote Package Installation via embedded Web Server proxy.
 STR_FILES=Files
 STR_EDITOR=Editor
 STR_SAVE=Save
@@ -160,4 +160,7 @@ STR_LANGUAGE=Language
 STR_TEMP_DIRECTORY=Temp Directory
 STR_REALDEBRID=Real-Debrid
 STR_BACKGROUND_INSTALL_INPROGRESS=Package install is running in the background. Don't close the app while install is in progress
-STR_ENABLE_DISC_CACHE_MSG=Enable disk caching. Can improve package install speed in cases where connection to remote is slow
+STR_ENABLE_DISC_CACHE_MSG=Enable disk caching. Can improve Remote Package Install speed in cases where connection to remote is slow, but breaks resuming of install
+STR_ENABLE_ALLDEBRID_MSG=Install Via AllDebrid
+STR_ENABLE_REALDEBRID_MSG=Install Via RealDebrid
+STR_ENABLE_DISKCACHE_DESC=Enable Disk Cache
